# switch-channel

./: Cargo.toml
benches/: benchmark.rs
src/: lib.rs
src/async_channel/: mod.rs
src/async_channel/async_std/: diswitchchannel.rs  mod.rs  switch_receiver.rs  switch_sender.rs
src/async_switch_channel/: mod.rs  switch_receiver.rs  switch_sender.rs
src/async_switch_channels/: mod.rs  switch_receiver.rs  switch_sender.rs
src/err/: mod.rs  recv.rs  send.rs  send_err.rs
src/sync/: mod.rs
src/sync_channel/std/: diswitchchannel.rs  mod.rs  switch_receiver.rs  switch_sender.rs  switch_sync_sender.rs
