[package]
name = "switch-channel"
version = "0.1.0"
authors = ["James Bell <jamesbell@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"

[dev-dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
futures = "0.3.13"
criterion = {version = "0.3.4", features = ["async_std"]}


[[bench]]
name = "benchmark"
harness = false
